--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.2.0",
     "angular-feather": "^6.5.1",
     "apexcharts": "^3.41.0",
+    "bootstrap": "^5.3.0",
     "ng-apexcharts": "^1.8.0",
     "ngx-toastr": "^15.2.2",
     "rxjs": "~7.8.0",
