--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "apexcharts": "^3.41.0",
     "bootstrap": "^5.3.0",
     "ng-apexcharts": "^1.8.0",
+    "ngx-bootstrap": "^11.0.2",
     "ngx-toastr": "^15.2.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
