--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-feather": "^6.5.1",
     "apexcharts": "^3.41.0",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.13.1",
     "moment": "^2.30.1",
     "ng-apexcharts": "^1.8.0",
     "ngx-bootstrap": "^11.0.2",
