--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "^17.3.12",
     "@angular/router": "^17.3.12",
     "angular-feather": "^6.5.1",
-    "apexcharts": "^3.41.0",
+    "apexcharts": "^4.7.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.13.1",
     "moment": "^2.30.1",
@@ -45,5 +45,21 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "^5.2.2"
+  },
+  "overrides": {
+    "@angular/core": "^17.3.12",
+    "@angular/common": "^17.3.12",
+    "@angular/compiler": "^17.3.12",
+    "@angular/platform-browser": "^17.3.12",
+    "@angular/platform-browser-dynamic": "^17.3.12",
+    "@angular/forms": "^17.3.12",
+    "@angular/router": "^17.3.12",
+    "@angular/animations": "^17.3.12",
+    "@angular/compiler-cli": "^17.3.12",
+    "@angular-devkit/build-angular": "^17.3.17",
+    "@angular/cli": "^17.3.17",
+    "rxjs": "~7.8.0",
+    "zone.js": "~0.14.10",
+    "apexcharts": "^4.7.0"
   }
 }
